--- a/index.html
+++ b/index.html
@@ -781,6 +781,30 @@
                     }
                 }
             }, [users, user]);
+            
+            // --- 2d. PRESENCE SYSTEM (HEARTBEAT) ---
+            useEffect(() => {
+                if (!user || !fb) return;
+                
+                const updatePresence = () => {
+                    const basePath = `artifacts/${fb.appId}/public/data`;
+                    fb.db.collection(`${basePath}/users`).doc(user.id).update({
+                        lastActive: firebase.firestore.FieldValue.serverTimestamp()
+                    }).catch(err => console.error("Presence update failed", err));
+                };
+
+                updatePresence(); // Run immediately on login/load
+                const interval = setInterval(updatePresence, 60000); // Run every minute
+
+                return () => clearInterval(interval);
+            }, [user, fb]);
+
+            // Helper: Check if a user is online (active in last 2 minutes)
+            const isOnline = (lastActive) => {
+                if (!lastActive) return false;
+                const diff = Date.now() - getMillis(lastActive);
+                return diff < 2 * 60 * 1000; // 2 minutes threshold
+            };
 
 
             // --- 3. HELPERS ---
@@ -1746,6 +1770,12 @@
                                                     {u.username === 'admin' && <span className="text-[10px] font-bold px-1.5 py-0.5 rounded bg-logo-green-100 text-logo-green-700 ml-2">OWNER</span>}
                                                     {u.username !== 'admin' && u.role === 'admin' && <span className="text-[10px] font-bold px-1.5 py-0.5 rounded bg-blue-100 text-blue-700 ml-2">ADMIN</span>}
                                                     {u.role === 'staff' && <span className="text-[10px] font-bold px-1.5 py-0.5 rounded bg-slate-100 text-slate-500 ml-2">STAFF</span>}
+                                                    {/* Online Indicator */}
+                                                    {isOnline(u.lastActive) && (
+                                                        <span className="ml-2 flex items-center gap-1 text-[10px] font-bold text-green-600 bg-green-50 px-1.5 py-0.5 rounded-full border border-green-200 animate-pulse">
+                                                            <span className="w-1.5 h-1.5 rounded-full bg-green-500"></span> Online
+                                                        </span>
+                                                    )}
                                                 </h3>
                                                 <p className="text-xs text-slate-400">
                                                     @{u.username} • HASHED PIN
