--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
             }, [user, fb]);
 
             // Helper: Check if a user is online (active in last 2 minutes)
-            const isOnline = (lastActive) => {
+            const isUserOnline = (lastActive) => {
                 if (!lastActive) return false;
                 const diff = Date.now() - getMillis(lastActive);
                 return diff < 2 * 60 * 1000; // 2 minutes threshold
@@ -1771,7 +1771,7 @@
                                                     {u.username !== 'admin' && u.role === 'admin' && <span className="text-[10px] font-bold px-1.5 py-0.5 rounded bg-blue-100 text-blue-700 ml-2">ADMIN</span>}
                                                     {u.role === 'staff' && <span className="text-[10px] font-bold px-1.5 py-0.5 rounded bg-slate-100 text-slate-500 ml-2">STAFF</span>}
                                                     {/* Online Indicator */}
-                                                    {isOnline(u.lastActive) && (
+                                                    {isUserOnline(u.lastActive) && (
                                                         <span className="ml-2 flex items-center gap-1 text-[10px] font-bold text-green-600 bg-green-50 px-1.5 py-0.5 rounded-full border border-green-200 animate-pulse">
                                                             <span className="w-1.5 h-1.5 rounded-full bg-green-500"></span> Online
                                                         </span>
